# Allow rapidjson files to be included in the hashdb distribution.
EXTRA_DIST = \
	allocators.h \
	document.h \
	encodedstream.h \
	encodings.h \
	error/en.h \
	error/error.h \
	filereadstream.h \
	filewritestream.h \
	internal/strfunc.h \
	internal/ieee754.h \
	internal/strtod.h \
	internal/pow10.h \
	internal/dtoa.h \
	internal/swap.h \
	internal/itoa.h \
	internal/meta.h \
	internal/diyfp.h \
	internal/biginteger.h \
	internal/stack.h \
	license.txt \
	memorybuffer.h \
	memorystream.h \
	msinttypes/inttypes.h \
	msinttypes/stdint.h \
	pointer.h \
	prettywriter.h \
	rapidjson.h \
	reader.h \
	README \
	stringbuffer.h \
	writer.h
